--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     
-
+    <h1 id="password"></h1>
+    
     <script type="text/javascript" src="main.js">
     </script>
 </body>
